# Zeus-Scanner-V3

./: Dockerfile  LICENSE  README.md  __init__.py  cli.py  docker-compose.yml  github.py  pyproject.toml  requirements.txt  zeus.py
etc/: integration_config.json
lib/ai_engine/: __init__.py  ai_analyzer.py  ai_orchestrator.py  comprehensive_knowledge_base.py  cve_detector.py  dynamic_payload_fetcher.py  enhanced_ai_engine.py  poc_generator.py  risk_assessor.py  template_generator.py  vulnerability_detector.py
lib/attacks/active_exploitation/: __init__.py  exploit_orchestrator.py  exploitation_engine.py  payload_executor.py  vulnerability_implementer.py
lib/attacks/admin_panel_finder/: __init__.py
lib/attacks/nmap_scan/: __init__.py
lib/attacks/sqlmap_scan/: __init__.py
lib/attacks/whois_lookup/: whois.py
lib/core/: colors.py  common.py  parse.py  parse.py.backup  settings.py  wafw00f_integration.py  xsser_integration.py
lib/header_check/: __init__.py
lib/integrations/: __init__.py  ai_orchestrator.py  katana_integration.py  nikto_integration.py  nuclei_integration.py  wapiti_integration.py  zap_integration.py
var/blackwidow/: __init__.py
var/search/: __init__.py  selenium_search.py
