[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "zeus-scanner"
description = "Advanced Web Vulnerability Assessment Tool"
readme = "README.md"
license = {text = "GPL-3.0"}
authors = [
    {name = "Zeus Scanner Team", email = "shivashastri70@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console", 
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7", 
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Networking :: Monitoring",
]
keywords = [
    "security", "vulnerability-scanner", "web-security", 
    "penetration-testing", "ethical-hacking", "reconnaissance"
]
requires-python = ">=3.6"
dependencies = [
    "selenium>=4.0.0",
    "requests>=2.25.0", 
    "beautifulsoup4>=4.9.3",
    "lxml>=4.6.3",
    "python-nmap>=0.7.1",
    "psutil>=5.8.0",
    "whichcraft>=0.6.1"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/shiva345-star/zeus-scanner"
Repository = "https://github.com/shiva345-star/zeus-scanner"
"Bug Reports" = "https://github.com/shiva345-star/zeus-scanner/issues"
Documentation = "https://github.com/shiva345-star/zeus-scanner/wiki"

[project.scripts]
zeus-scanner = "zeus_scanner.cli:main"
zeus = "zeus_scanner.cli:main"

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
zeus_scanner = [
    "etc/*.txt",
    "etc/**/*.txt", 
    "etc/**/**/*.txt",
    "bin/*",
    "*.md",
    "*.yml", 
    "*.yaml",
    "*.sh"
]

[tool.setuptools_scm]
write_to = "zeus_scanner/_version.py"
